[package]
name = "cp-common"
version = "0.1.0"
authors = ["Joerg Mueller <joergm@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
rand = "0.8"
opentelemetry = { version = "0.12.0"}
opentelemetry-jaeger = { version = "0.11.0", features = ["collector_client", "reqwest_blocking_collector_client"] }
