[package]
name = "frontend"
version = "0.1.0"
authors = ["JoergM <joergm@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
handlebars = "3.5"
serde_json = "1.0"
env_logger = "0.8"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }