[package]
name = "frontend"
version = "0.4.0"
authors = ["JoergM <joergm@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
handlebars = "3.5"
serde_json = "1.0"
env_logger = "0.8"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
opentelemetry = { version = "0.12.0"}
opentelemetry-jaeger = { version = "0.11.0", features = ["collector_client", "reqwest_blocking_collector_client"] }
actix-web-opentelemetry = "0.10.0"
awc = "2.0.3"