[package]
name = "schedule"
version = "0.4.0"
authors = ["JoergM <joergm@hey.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.8"
opentelemetry = { version = "0.12.0"}
opentelemetry-jaeger = { version = "0.11.0", features = ["collector_client", "reqwest_blocking_collector_client"] }
actix-web-opentelemetry = "0.10.0"
cp-common = { path = "../cp-common"} 